[package]
name = "poa_block_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"
rand = "0.8.5"
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1/", features = ["rand"]}