[package]
name = "Carlito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = "1.12.0"
futures = "0.3.26"
once_cell = "1.17.0"
rand = "0.8.5"
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1/", features = ["rand","bitcoin-hashes"]}
yaml-rust = "0.4.5"
trust-dns-client = "*"
json = "0.12.4"
